# quant

./: .gitignore  Cargo.toml  config.toml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  lib.rs  tool.rs
crates/agent/src/agent/: prompt.rs  technical.rs
crates/api_client/: Cargo.toml
crates/api_client/src/: http.rs  websocket.rs
crates/api_client/src/http/: binance.rs
crates/api_client/src/websocket/: biance.rs
crates/api_client/src/websocket/biance/: funding_rate.rs  kline.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/broker/: Cargo.toml
crates/broker/src/: biance.rs  lib.rs
crates/broker/tests/: hyperliquid_test.rs  test_live_trade.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  utils.rs
crates/notify/: Cargo.toml
crates/notify/src/: telegram.rs
crates/notify/src/telegram/: callback.rs  command.rs  menu.rs  subscription.rs
crates/quant/: Cargo.toml
crates/quant/src/: aggregator.rs  analyzer.rs  audit.rs  calculator.rs  config.rs  lib.rs  position.rs  report.rs  risk_manager.rs  stats.rs  tracker.rs  trailing.rs  types.rs  utils.rs
crates/quant/src/analyzer/: audit.rs  context.rs  fakeout.rs  gravity.rs  regime.rs  resonance.rs  signal.rs  volatility.rs  volume.rs
crates/quant/src/analyzer/audit/: risk_audit.rs
crates/quant/src/analyzer/context/: correlation_regime.rs  gravity.rs  level_proximity.rs  market_regime.rs  regime.rs  temporal_session.rs  volatility.rs  volatility_environment.rs  volume.rs  volume_structure.rs
crates/quant/src/analyzer/signal/: fakeout_detector.rs  momentum_divergence.rs  momentum_resonance.rs
crates/quant/src/types/: futures.rs  gravity.rs  market.rs  session.rs
crates/quant/src/utils/: efficiency.rs  effiency.rs  math.rs  volatility.rs
crates/service/: Cargo.toml
crates/service/src/: analysis.rs  context.rs  integrity.rs  integrity_manager.rs  lib.rs  types.rs
crates/service/src/integrity/: context.rs
crates/storage/: Cargo.toml
crates/storage/src/: postgres.rs
crates/storage/src/postgres/: aggregator.rs  user.rs
