[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/app"]
[workspace.package]
version = "0.1.0"
edition = "2018"
authors = ["xingyaoc"]

[workspace.dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures-util = "0.3.32"
ractor = "0.15.11"
dashmap = "6.1.0"
reqwest = { version = "0.12.28", features = ["socks", "json"] }

schemars = { version = "1.2.1", features = ["chrono04"] }

url = "2.5.8"
tokio-socks = "0.5.2"


rig-qdrant = "0.2.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = "1.21.0"
anyhow = "1.0.102"
thiserror = "2.0.18"
config = "0.15.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ta = "0.5.0"
rig-core = { version = "0.33.0", features = ["all"] }
