[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
ractor.workspace =true
tracing-subscriber.workspace = true
rig-core.workspace =true

service = { path = "../service" }
common = { path = "../common" }
quant  ={path="../quant"}
storage = { path = "../storage" }
api_client = { path = "../api_client" }
notify = { path = "../notify" }
agent = {path="../agent"}
