[package]
name = "broker"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]

rust_decimal = { version = "1", features = ["serde"] }

tokio.workspace = true
tracing.workspace = true
common = { path = "../common" }
quant = { path = "../quant" }
service = { path = "../service" }
