[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
ta.workspace = true
tokio.workspace = true
config.workspace = true
anyhow.workspace =true
polars = { version = "0.53.0", features = ["lazy", "temporal"] }

