[package]
name = "notify"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace=true
reqwest.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
teloxide.workspace=true
futures-util.workspace = true
common = { path = "../common" }
service = { path = "../service" }
quant = { path = "../quant" }
storage = { path = "../storage" }
api_client = { path = "../api_client" }
