[package]
name = "quant"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]

serde_json.workspace = true
schemars.workspace = true
serde.workspace = true
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
dashmap.workspace = true
ta = "0.5.0"
common = { path = "../common" }
